# tauri-plugin-network

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
examples/sveltekit/: package.json  pnpm-lock.yaml  tailwind.config.js
examples/sveltekit/src-tauri/: Cargo.toml
examples/sveltekit/src-tauri/capabilities/: default.json
examples/sveltekit/src-tauri/src/: lib.rs
examples/sveltekit/src/lib/components/: check-port.svelte  scan.svelte
examples/sveltekit/src/routes/: +layout.svelte  +page.svelte
examples/sveltekit/src/routes/scan/: +page.svelte
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: main.rs
guest-js/: api.ts  index.ts  models.ts  types.ts
permissions/: all.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: find_available_port.toml  get_interfaces.toml  get_non_empty_interfaces.toml  is_http_port_open.toml  is_port_taken.toml  local_server_is_running.toml  non_localhost_networks.toml  scan_local_network_online_hosts_by_port.toml  scan_online_ip_port_pairs.toml  scan_online_ips_by_port.toml
permissions/schemas/: schema.json
src/: common.rs  lib.rs
src/commands/: interface.rs  mod.rs  scan.rs
src/model/: interface.rs
src/network/: constant.rs  mod.rs  model.rs  scan.rs  utils.rs
webview-dist/: api.d.ts  api.d.ts.map  index.d.ts  index.d.ts.map  index.js  types.d.ts  types.d.ts.map
webview-src/: api.ts  index.ts  tsconfig.json  types.ts
