[package]
name = "tauri-plugin-network"
version = "0.0.0"
authors = ["Huakun"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.4.0" }
serde = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
network-interface = { version = "1.0.2", features = ["serde"] }
