[package]
name = "tauri-plugin-network"
version = "2.0.1"
license = "MIT"
authors = [ "Huakun" ]
description = "A tauri plugin for retrieving system info"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-network"
repository = "https://github.com/HuakunShen/tauri-plugin-network.git"

[dependencies]
tauri = { version = "2.0.0-beta.19" }
serde = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
network-interface = { version = "1.0.2", features = ["serde"] }
reqwest = "0.11.18"
ipnetwork = "0.20.0"
futures = "0.3.28"
if-addrs = "0.10.1"


[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.15", features = ["build"] }
